[package]
name = "astroport-factory"
version = "1.10.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport factory contract - pair contract generator and directory"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
build_variants = ["injective", "coreum"]

[package.metadata.optimizer]
standard-build = true
builds = [{ name = "coreum", features = ["coreum"] }]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []
coreum = ["astroport/coreum", "astroport-test/coreum", "astroport-pair/coreum"]

[dependencies]
cosmwasm-std.workspace = true
astroport.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
thiserror.workspace = true
itertools.workspace = true
cosmwasm-schema.workspace = true
cw-utils.workspace = true

[dev-dependencies]
astroport-test = { path = "../../packages/astroport_test" }
cw20-base = { version = "1.1", features = ["library"] }
astroport-pair = { path = "../pair" }
cw20 = "1.1"
anyhow = "1.0"
prost = "0.11.5"
